--- a/i18n/pt_BR.po
+++ b/i18n/pt_BR.po
@@ -27460,12 +27460,12 @@ msgstr ""
 
 msgid ""
 "``pullbundle``\n"
-"    When set, the server will check pullbundle.manifest for bundles\n"
+"    When set, the server will check pullbundles.manifest for bundles\n"
 "    covering the requested heads and common nodes. The first matching\n"
 "    entry will be streamed to the client."
 msgstr ""
 "``pullbundle``\n"
-"    Se definido, o servidor verificará pullbundle.manifest para\n"
+"    Se definido, o servidor verificará pullbundles.manifest para\n"
 "    arquivos de bundle que contiverem as cabeças e nós comuns\n"
 "    pedidos. A primeira entrada correspondente será enviadas para\n"
 "    o cliente."
